[metadata]
name = nginx2es
author = Andrew Grigorev
author-email = andrew@ei-grad.ru
summary = Put parsed Nginx access.log to Elasticsearch
description-file = README.rst
home-page = https://github.com/ei-grad/nginx2es
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Internet :: Log Analysis
    Topic :: System :: Logging
    Topic :: System :: Monitoring
keywords =
    nginx
    access.log
    elasticsearch

[files]
modules =
    nginx2es

[entry_points]
console_scripts =
    nginx2es = nginx2es:main
